--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam-channel = "0.4"
+crossbeam-channel = "0.5"
 gumdrop = "0.8"
 os_pipe = "0.9"
 tempfile = "3.1"
-wayland-client = "0.26"
-
-[dependencies.wayland-protocols]
-features = ["client"]
-version = "0.26"
+wayland-client = "0.28"
+wayland-protocols = {version = "0.28", features = ["client"]}
 
 [dev-dependencies]
-rand = "0.7"
+rand = "0.8"
+
+[profile.release]
+lto = true
